--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -7,7 +7,9 @@
 //Tilføj eller ret farver i Bootstrap. Herunder er primary blot sat til den normale primary
 $custom-colors: (
   "primary": #0d6efd, //Retter primary
-  "minFarve": #ffff00 //Tilføjer minFarve
+  "minFarve": #ffff00, //Tilføjer minFarve
+        "mørkeBrun": #2D0D07, //Tilføjet brunfarve
+        "hvid": #FFFFFF // Tilføjet hvid
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
 $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
