--- a/css/styles.scss
+++ b/css/styles.scss
@@ -45,3 +45,82 @@ img {
 	padding: 10px;
 }
 
+.forside-omos {
+	padding-bottom: 10px;
+}
+
+.footer {
+	width: 100%;
+	position: relative;
+	height: auto;
+	background-color: #070617;
+}
+.footer .col {
+	width: 190px;
+	height: auto;
+	float: left;
+	padding: 0 20px 20px 20px;
+}
+.footer .col h1 {
+	margin: 0;
+	font-family: inherit;
+	font-size: 12px;
+	line-height: 17px;
+	padding: 20px 0 5px 0;
+	font-weight: normal;
+	text-transform: uppercase;
+	letter-spacing: 0.250em;
+}
+.footer .col ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+.footer .col ul li {
+	color: #999999;
+	font-size: 14px;
+	font-family: inherit;
+	font-weight: bold;
+	padding: 5px 0 5px 0;
+	cursor: pointer;
+}
+.social ul li {
+	display: inline-block;
+	padding-right: 5px !important;
+}
+
+@media only screen and (min-width: 1280px) {
+	.contain {
+		width: 1200px;
+		margin: 0 auto;
+	}
+}
+@media only screen and (max-width: 950px) {
+	.footer .col {
+		width: 33%;
+	}
+	.footer .col h1 {
+		font-size: 14px;
+	}
+	.footer .col ul li {
+		font-size: 13px;
+	}
+}
+@media only screen and (max-width: 500px) {
+	.footer .col {
+		width: 50%;
+	}
+	.footer .col h1 {
+		font-size: 14px;
+	}
+	.footer .col ul li {
+		font-size: 13px;
+	}
+}
+@media only screen and (max-width: 340px) {
+	.footer .col {
+		width: 50%;
+	}
+}
+
+
