--- a/css/styles.scss
+++ b/css/styles.scss
@@ -99,45 +99,27 @@ body, html {
 	color: white;
 }
 
-
 .footer {
 	width: 100%;
 	position: relative;
 	height: auto;
-	background-color: #070617;
+	background-color: white;
 }
-.footer .col {
-	width: 190px;
-	height: auto;
-	float: left;
-	padding: 0 20px 20px 20px;
-}
-.footer .col h1 {
+
+.footer .col-12 p {
 	margin: 0;
-	font-family: inherit;
-	font-size: 12px;
+	font-size: 16px;
 	line-height: 17px;
-	padding: 20px 0 5px 0;
-	font-weight: normal;
-	text-transform: uppercase;
 	letter-spacing: 0.250em;
 }
-.footer .col ul {
-	list-style-type: none;
-	margin: 0;
+
+.footer-link {
+	color: white !important;
+	border-bottom: 2px solid #DDC49C;
+}
+
+.footer-spacing {
 	padding: 0;
-}
-.footer .col ul li {
-	color: #999999;
-	font-size: 14px;
-	font-family: inherit;
-	font-weight: bold;
-	padding: 5px 0 5px 0;
-	cursor: pointer;
-}
-.social ul li {
-	display: inline-block;
-	padding-right: 5px !important;
 }
 
 @media only screen and (min-width: 1280px) {
@@ -155,33 +137,6 @@ body, html {
 	}
 	.navbar-nav {
 
-	}
-}
-@media only screen and (max-width: 950px) {
-	.footer .col {
-		width: 33%;
-	}
-	.footer .col h1 {
-		font-size: 14px;
-	}
-	.footer .col ul li {
-		font-size: 13px;
-	}
-}
-@media only screen and (max-width: 500px) {
-	.footer .col {
-		width: 50%;
-	}
-	.footer .col h1 {
-		font-size: 14px;
-	}
-	.footer .col ul li {
-		font-size: 13px;
-	}
-}
-@media only screen and (max-width: 340px) {
-	.footer .col {
-		width: 50%;
 	}
 }
 
