--- a/css/styles.scss
+++ b/css/styles.scss
@@ -35,8 +35,6 @@ img {
 	height: auto;
 }
 
-
-
 .TekstForside {
 	text-align: center;
 	padding: 20px;
@@ -77,7 +75,7 @@ body, html {
 .hero-text {
 	text-align: left;
 	position: absolute;
-	top: 45%;
+	top: 50%;
 	left: 37%;
 	transform: translate(-50%, -50%);
 	color: white;
@@ -135,8 +133,16 @@ body, html {
 		padding: 30px 350px;
 		height: 20em;
 	}
-	.navbar-nav {
+	.hero-image {
+		height: 80%;
+	}
+	.hero-text {
+		left: 20%;
 
+	}
+
+	.hero-text h1 {
+		font-size: 50px !important;
 	}
 }
 
