--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,7 +6,7 @@
 body {
 	margin: 0;
 	background-color: #DDC49C;
-	font-family: "Microsoft JhengHei", sans-serif;
+	// font-family: "Microsoft JhengHei", sans-serif; //
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -110,6 +110,25 @@ body, html {
 .hero-text button:hover {
 	background-color: #555;
 	color: white;
+}
+
+.billede-knap {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: hsla(0,0%,100%,.85);
+	border: none;
+	color: #000000;
+	display: inline-block;
+	min-width: 260px;
+	padding: 15px 10px;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 1.2rem;
+	font-style: normal;
+	font-weight: 600;
 }
 
 .footer {
@@ -217,7 +236,7 @@ body, html {
 		margin: 0 auto;
 	}
 	.card-group {
-		padding: 25px;
+		padding: 25px 0 50px 0;
 	}
 	.TekstForside {
 		text-align: center;
