--- a/css/Omos.scss
+++ b/css/Omos.scss
@@ -202,7 +202,13 @@ body, html {
   margin-left: 3px;
 }
 
+.omos-reorder1 {
+  order: 2;
+}
 
+.omos-reorder2 {
+  order: 1;
+}
 
 /* Media Queries */
 
@@ -226,6 +232,14 @@ body, html {
   }
   .card-group {
     padding: 50px 0 50px 0;
+  }
+
+  .omos-reorder1 {
+    order: 1;
+  }
+
+  .omos-reorder2 {
+    order: 2;
   }
 
 }
