--- a/css/Omos.scss
+++ b/css/Omos.scss
@@ -143,6 +143,7 @@ body, html {
 
 .footer-distributed {
   background-color: #2D0D07;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   text-align: left;
