--- a/css/Produktsider.scss
+++ b/css/Produktsider.scss
@@ -99,24 +99,6 @@ body, html {
   color: white;
 }
 
-.billede-knap {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: hsla(0,0%,100%,.85);
-  border: none;
-  color: #000000;
-  display: inline-block;
-  min-width: 260px;
-  padding: 15px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-  font-style: normal;
-  font-weight: 600;
-}
 
 .footer {
   width: 100%;
@@ -143,6 +125,7 @@ body, html {
 
 .footer-distributed {
   background-color: #2D0D07;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
   text-align: left;
