--- a/css/styles.scss
+++ b/css/styles.scss
@@ -116,6 +116,8 @@ body, html {
 	position: absolute;
 	top: 50%;
 	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 	background: hsla(0,0%,100%,.85);
 	border: none;
@@ -156,6 +158,7 @@ body, html {
 
 .footer-distributed {
 	background-color: #2D0D07;
+	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	width: 100%;
 	text-align: left;
