Oprettet dropdown menu i navbar

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -69,10 +69,15 @@ img {
 	color: white !important;
 }
 
+.dropdown-item {
+	color: white !important;
+}
+
 .navbar .nav-item a {
 	font-weight: bold;
 	font-size: 18px;
 }
+
 
 body, html {
 	height: 100%;
