--- a/css/Produktsider.scss
+++ b/css/Produktsider.scss
@@ -69,6 +69,10 @@ img {
   font-size: 18px;
 }
 
+.dropdown-item {
+  color: white !important;
+}
+
 body, html {
   height: 100%;
 }
@@ -98,6 +102,8 @@ body, html {
   background-color: #555;
   color: white;
 }
+
+
 
 
 .footer {
