--- a/css/styles.scss
+++ b/css/styles.scss
@@ -45,9 +45,9 @@ img {
 }
 
 .TekstForside h1 {
-	font-weight: bold;
+	font-weight: 600;
 	font-size: 26px;
-	padding: 20px 0 50px 0;
+	padding: 20px 0 30px 0;
 }
 
 .TekstForside-paragraph {
@@ -75,6 +75,8 @@ img {
 
 .navbar .nav-item a {
 	font-size: 18px;
+	font-weight: 600;
+	font-style: normal;
 }
 
 
