--- a/css/bootstrap.scss
+++ b/css/bootstrap.scss
@@ -9,7 +9,8 @@ $custom-colors: (
   "primary": #0d6efd, //Retter primary
   "minFarve": #ffff00, //Tilføjer minFarve
         "mørkeBrun": #2D0D07, //Tilføjet brunfarve
-        "hvid": #FFFFFF // Tilføjet hvid
+        "hvid": #FFFFFF, // Tilføjet hvid
+        "lyseBrun": #DDC49C // Tilføjet lysebrun
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
 $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
