--- a/css/styles.scss
+++ b/css/styles.scss
@@ -180,7 +180,7 @@ body, html {
 
 .footer-distributed p.footer-links {
 	font-size: 18px;
-	font-weight: bold;
+	font-weight: 600;
 	color: #FFFFFF;
 	margin: 0 0 10px;
 	padding: 0;
