Rettet placering af prisskilt

--- a/css/Produktsider.scss
+++ b/css/Produktsider.scss
@@ -107,16 +107,18 @@ body, html {
   font-size: 20px;
 }
 
+.produkttekst {
+  font-size: 20px;
+  font-weight: 600;
+}
+
 .billede-knap {
-  position: relative;
-  left: 58%;
-  bottom: 20%;
   background: hsla(0,0%,100%,.85);
   border: none;
   color: #000000;
   display: inline-block;
   max-width: 150px;
-  padding: 15px 10px;
+  padding: 15px 20px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -233,13 +235,6 @@ body, html {
   }
   .card-group {
     padding: 50px 0 50px 0;
-  }
-
-  .billede-knap {
-    position: relative;
-    left: 73%;
-    bottom: 90%;
-    background: hsla(0,0%,100%,.85);
   }
 }
 
