--- a/css/kontaktform.scss
+++ b/css/kontaktform.scss
@@ -60,18 +60,12 @@ input[type=submit]:hover {
   font-size: 50px !important;
 }
 
-.TekstForside {
-  padding: 20px;
-}
 
-.TekstForside h1 {
-  font-weight: bold;
-  font-size: 40px !important;
-  padding: 50px 0 40px 0;
-}
-
-.TekstForside-paragraph {
-  font-size: 20px;
+.kontaktformtekst h1 {
+  text-align: center;
+  font-weight: 600;
+  font-size: 26px;
+  padding: 20px 0 30px 0;
 }
 
 
