--- a/css/kontaktform.scss
+++ b/css/kontaktform.scss
@@ -60,6 +60,11 @@ input[type=submit]:hover {
   font-size: 50px !important;
 }
 
+.kontaktform-overskrifter {
+  font-size: 20px;
+  font-weight: 600;
+}
+
 
 .kontaktformtekst h1 {
   text-align: center;
