Rettet knapper på siden

--- a/css/Produktsider.scss
+++ b/css/Produktsider.scss
@@ -111,9 +111,9 @@ body, html {
 }
 
 .billede-knap {
-  background: hsla(0,0%,100%,.85);
+  background-color: #2D0D07;
   border: none;
-  color: #000000;
+  color: #FFFFFF;
   display: inline-block;
   max-width: 150px;
   padding: 10px 20px;
