--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,7 +6,7 @@
 body {
 	margin: 0;
 	background-color: #DDC49C;
-	font-family: "Microsoft JhengHei", sans-serif;
+	// font-family: "Microsoft JhengHei", sans-serif; //
 }
 
 h1, h2, h3, h4, h5, h6 {
