--- a/css/Produktsider.scss
+++ b/css/Produktsider.scss
@@ -43,6 +43,7 @@ img {
   padding: 20px;
 }
 
+
 .TekstForside h1 {
   font-weight: bold;
   font-size: 40px !important;
@@ -233,6 +234,10 @@ body, html {
   }
   .card-group {
     padding: 50px 0 50px 0;
+  }
+
+  .TekstForside h1 {
+    font-size: 50px !important;
   }
 }
 
