--- a/css/kontaktform.scss
+++ b/css/kontaktform.scss
@@ -94,7 +94,7 @@ body, html {
 
 .hero-image {
   background-image: url("../images/Sweets_Candy_Chocolate_Black_background_521530_1920x1080.jpg");
-  height: 50%;
+  height: 50vh;
   background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
